--- a/assets/css/output.css
+++ b/assets/css/output.css
@@ -1840,6 +1840,13 @@
     @media (width >= 64rem) {
       grid-template-columns: repeat(5, minmax(0, 1fr));
     }
+    &::-webkit-scrollbar {
+      display: none;
+    }
+    @media (min-width: 1024px) {
+      scrollbar-width: none;
+      -ms-overflow-style: none;
+    }
     & a {
       position: relative;
       padding: calc(var(--spacing) * 1);
@@ -1887,11 +1894,12 @@
           padding-inline: calc(var(--spacing) * 5);
         }
         & i {
+          margin-top: calc(var(--spacing) * -1);
           font-size: var(--text-2xl);
           line-height: var(--tw-leading, var(--text-2xl--line-height));
           @media (width >= 64rem) {
-            font-size: var(--text-5xl);
-            line-height: var(--tw-leading, var(--text-5xl--line-height));
+            font-size: var(--text-4xl);
+            line-height: var(--tw-leading, var(--text-4xl--line-height));
           }
         }
         & p {
